--- a/2D_MMO_Server/GameServer/GameServer.vcxproj.filters
+++ b/2D_MMO_Server/GameServer/GameServer.vcxproj.filters
@@ -74,6 +74,12 @@
     <ClInclude Include="DBSession.h">
       <Filter>Session</Filter>
     </ClInclude>
+    <ClInclude Include="Protocol_generated.h">
+      <Filter>Protocol</Filter>
+    </ClInclude>
+    <ClInclude Include="Test_generated.h">
+      <Filter>Protocol</Filter>
+    </ClInclude>
     <ClInclude Include="GameRoom.h">
       <Filter>Game</Filter>
     </ClInclude>
@@ -85,15 +91,6 @@
     </ClInclude>
     <ClInclude Include="RoomManager.h">
       <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Chat_generated.h">
-      <Filter>Protocol</Filter>
-    </ClInclude>
-    <ClInclude Include="InGame_generated.h">
-      <Filter>Protocol</Filter>
-    </ClInclude>
-    <ClInclude Include="Protocol_generated.h">
-      <Filter>Protocol</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
